feat: 수동 로또 구매 기능 추가